Fixed broken image links, removed duplicated content

--- a/_posts/2005-10-01-pictures.md
+++ b/_posts/2005-10-01-pictures.md
@@ -17,7 +17,7 @@ blogger_orig_url: https://sannielee.com/2005/10/pictures.html
 
 <img src="/assets/img/IMG_0583.jpg" border="0" alt="Denkmal an die ermordeten Juden"/>
 
-<img src="/assets/img/IMG_05711.JPG" border="0" alt="Trafalgar Square" />
+<img src="/assets/img/IMG_05711.jpg" border="0" alt="Trafalgar Square" />
 I'm sitting in a Starbucks paying 8€ an hour because Alex and I thought we could get free wireless here.  But no, you have to put in a credit card number...but we figured, eh, we trekked here with our computers, might as well just do it.  And now I can post pictures because they're on my computer, while normally I would be in an internet cafe.
 
 The search for an apartment is only going ok...Alex is having better luck with getting appointments.  But it's only the second day we've been searching.  I'll just keep pressing on, I suppose.  <sigh>  It still scares me though because I don't want to end up in some crappy neighborhood...maybe I'll just end up in an apartment by myself.  We'll see.
