Added SEO info as well as improvements for social sharing

--- a/_posts/2019-01-10-top-5-albums-of-2018.md
+++ b/_posts/2019-01-10-top-5-albums-of-2018.md
@@ -8,6 +8,7 @@ tags:
 - "The Interrupters"
 - "The Living End"
 - "Franz Ferdinand"
+description: It might be a bit late, but here are my top five albums of 2018, along with my favorite tracks off each one.
 ---
 As I write this, we're already almost two weeks into 2019. I didn't have time to write this after
 [migrating my blog](https://sannielee.com/2018/12/30/migrating-from-blogger-to-jekyll.html){:target="_blank"} since I thought
